# memory-superagents

./: .gitignore  .mcp.json  README.md  docker-compose.yml  install.sh  schema.sql
.claude-plugin/: marketplace.json  plugin.json
cli/: .gitignore  go.mod  go.sum  main.go  pyproject.toml
cli/cmd/: backup.go  compact.go  config.go  doctor.go  doctor_test.go  export.go  hooks.go  install.go  migrate.go  reindex.go  reset.go  restore.go  search.go  stats.go  status.go  uninstall.go
cli/internal/ai/: embed.go  embed_test.go
cli/internal/config/: config.go  config_test.go
cli/internal/db/: db.go  db_test.go
cli/internal/output/: output.go
cli/memory_cli/: main.py
cli/templates/: export.md.tmpl  timeline.md.tmpl
docs/superpowers/plans/: 2026-05-07-memory-mcp-server.md  2026-05-08-conversation-sessions.md  2026-05-08-memory-cli-go.md  2026-05-08-memory-cli.md  2026-05-08-plugin-restructuring.md
docs/superpowers/specs/: 2026-05-07-memory-mcp-design.md  2026-05-08-conversation-sessions-design.md  2026-05-08-core-insights-design.md
hooks/: hooks.json  memory-hook.sh
mcp-server/: db.py  models.py  pyproject.toml  requirements.txt  run-mcp-server.sh  server.py
mcp-server/common/: __init__.py  db.py
mcp-server/core/: __init__.py  tools.py
mcp-server/insights/: __init__.py  tools.py
mcp-server/notebook/: __init__.py  tools.py
mcp-server/tests/: test_db_session.py
memory-mcp-server/: db.py  embeddings.py  pyproject.toml  server.py
migrations/: 002_agentlab_notebook.sql
skills/memory-manager/: SKILL.md
(+1 files in other folders)
