[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "asyncpg>=0.29",
  "openai>=1.0",
  "jinja2>=3.0",
]

[project.scripts]
memory = "memory_cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8"]
