[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0",
  "asyncpg>=0.29",
  "openai>=1.0",
  "pydantic>=2.0",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
